--- a/complete/build.gradle
+++ b/complete/build.gradle
@@ -19,28 +19,28 @@ repositories {
 
 dependencyManagement {
     imports {
-        mavenBom "io.micronaut:bom:$micronautVersion"
+        mavenBom "io.micronaut:micronaut-bom:$micronautVersion"
     }
 }
 
 dependencies {
-    annotationProcessor "io.micronaut:inject-java"
-    annotationProcessor "io.micronaut:validation"
-    implementation "io.micronaut:http-client"
-    implementation "io.micronaut:http-server-netty"
-    implementation "io.micronaut:inject"
-    implementation "io.micronaut:validation"
-    implementation "io.micronaut:runtime"
+    annotationProcessor "io.micronaut:micronaut-inject-java"
+    annotationProcessor "io.micronaut:micronaut-validation"
+    implementation "io.micronaut:micronaut-http-client"
+    implementation "io.micronaut:micronaut-http-server-netty"
+    implementation "io.micronaut:micronaut-inject"
+    implementation "io.micronaut:micronaut-validation"
+    implementation "io.micronaut:micronaut-runtime"
 
     //tag::graal[]
     compileOnly "com.oracle.substratevm:svm:GraalVM-1.0.0-rc7"
-    runtimeOnly "io.micronaut:graal"
+    runtimeOnly "io.micronaut:micronaut-graal"
     //end::graal[]
 
-    compileOnly "io.micronaut:inject-java"
+    compileOnly "io.micronaut:micronaut-inject-java"
     runtimeOnly "ch.qos.logback:logback-classic:1.2.3"
     testImplementation "junit:junit:4.12"
-    testImplementation "io.micronaut:inject-java"
+    testImplementation "io.micronaut:micronaut-inject-java"
     testImplementation "org.hamcrest:hamcrest-all:1.3"
 }
 
