--- a/complete/Dockerfile
+++ b/complete/Dockerfile
@@ -1,4 +1,17 @@
-FROM openjdk:8u171-alpine3.7
-RUN apk --no-cache add curl
+FROM oracle/graalvm-ce:1.0.0-rc7
+EXPOSE 8080
 COPY build/libs/*-all.jar complete.jar
-CMD java ${JAVA_OPTS} -jar complete.jar
+ADD . build
+RUN java -cp complete.jar io.micronaut.graal.reflect.GraalClassLoadingAnalyzer 
+RUN native-image --no-server \
+             --class-path complete.jar \
+             -H:ReflectionConfigurationFiles=build/reflect.json \
+             -H:EnableURLProtocols=http \
+             -H:IncludeResources="logback.xml|application.yml|META-INF/services/*.*" \
+             -H:Name=complete \
+             -H:Class=example.micronaut.Application \
+             -H:+ReportUnsupportedElementsAtRuntime \
+             -H:+AllowVMInspection \
+             --rerun-class-initialization-at-runtime='sun.security.jca.JCAUtil$CachedSecureRandomHolder,javax.net.ssl.SSLContext' \
+             --delay-class-initialization-to-runtime=io.netty.handler.codec.http.HttpObjectEncoder,io.netty.handler.codec.http.websocketx.WebSocket00FrameEncoder,io.netty.handler.ssl.util.ThreadLocalInsecureRandom
+ENTRYPOINT ["./complete"]
