--- a/complete/build.gradle
+++ b/complete/build.gradle
@@ -26,22 +26,22 @@ dependencyManagement {
 dependencies {
     annotationProcessor "io.micronaut:micronaut-inject-java"
     annotationProcessor "io.micronaut:micronaut-validation"
-    implementation "io.micronaut:micronaut-http-client"
-    implementation "io.micronaut:micronaut-http-server-netty"
-    implementation "io.micronaut:micronaut-inject"
-    implementation "io.micronaut:micronaut-validation"
-    implementation "io.micronaut:micronaut-runtime"
+    compile "io.micronaut:micronaut-http-client"
+    compile "io.micronaut:micronaut-http-server-netty"
+    compile "io.micronaut:micronaut-inject"
+    compile "io.micronaut:micronaut-validation"
+    compile "io.micronaut:micronaut-runtime"
 
     //tag::graal[]
-    compileOnly "com.oracle.substratevm:svm:GraalVM-1.0.0-rc7"
-    runtimeOnly "io.micronaut:micronaut-graal"
+    compileOnly "com.oracle.substratevm:svm"
+    runtime "io.micronaut:micronaut-graal"
     //end::graal[]
 
     compileOnly "io.micronaut:micronaut-inject-java"
-    runtimeOnly "ch.qos.logback:logback-classic:1.2.3"
-    testImplementation "junit:junit:4.12"
-    testImplementation "io.micronaut:micronaut-inject-java"
-    testImplementation "org.hamcrest:hamcrest-all:1.3"
+    runtime "ch.qos.logback:logback-classic:1.2.3"
+    testCompile "junit:junit:4.12"
+    testCompile "io.micronaut:micronaut-inject-java"
+    testCompile "org.hamcrest:hamcrest-all:1.3"
 }
 
 shadowJar {
