--- a/complete/build.gradle
+++ b/complete/build.gradle
@@ -1,12 +1,11 @@
 plugins {
     id "io.spring.dependency-management" version "1.0.6.RELEASE"
-    id "com.github.johnrengelman.shadow" version "4.0.0"
-    id "net.ltgt.apt-eclipse" version "0.18"
-    id "net.ltgt.apt-idea" version "0.18"
+    id "com.github.johnrengelman.shadow" version "4.0.2"
+    id "application"
+    id "java"
+    id "net.ltgt.apt-eclipse" version "0.21"
+    id "net.ltgt.apt-idea" version "0.21"
 }
-
-apply plugin:"application"
-apply plugin:"java"
 
 version "0.1"
 group "example.micronaut"
@@ -24,6 +23,11 @@ dependencyManagement {
     }
 }
 
+configurations {
+    // for dependencies that are needed for development only
+    developmentOnly
+}
+
 dependencies {
     annotationProcessor "io.micronaut:micronaut-inject-java"
     annotationProcessor "io.micronaut:micronaut-validation"
@@ -35,22 +39,31 @@ dependencies {
 
     //tag::graal[]
     compileOnly "com.oracle.substratevm:svm"
-    runtime "io.micronaut:micronaut-graal"
+    annotationProcessor "io.micronaut:micronaut-graal"
     //end::graal[]
 
     compileOnly "io.micronaut:micronaut-inject-java"
     runtime "ch.qos.logback:logback-classic:1.2.3"
-    testCompile "junit:junit:4.12"
-    testCompile "io.micronaut:micronaut-inject-java"
-    testCompile "org.hamcrest:hamcrest-all:1.3"
+    testAnnotationProcessor "io.micronaut:micronaut-inject-java"
+    testCompile "org.junit.jupiter:junit-jupiter-api"
+    testCompile "io.micronaut.test:micronaut-test-junit5"
+    testRuntime "org.junit.jupiter:junit-jupiter-engine"
 }
 
 shadowJar {
     mergeServiceFiles()
 }
 
+run.classpath += configurations.developmentOnly
+test.classpath += configurations.developmentOnly
 run.jvmArgs('-noverify', '-XX:TieredStopAtLevel=1')
 
 mainClassName = "example.micronaut.Application"
-compileJava.options.compilerArgs += '-parameters'
-compileTestJava.options.compilerArgs += '-parameters'
+// use JUnit 5 platform
+test {
+    useJUnitPlatform()
+}
+tasks.withType(JavaCompile){
+    options.encoding = "UTF-8"
+    options.compilerArgs.add('-parameters')
+}
