--- a/complete/build.gradle
+++ b/complete/build.gradle
@@ -39,7 +39,7 @@ dependencies {
 
     //tag::graal[]
     compileOnly "com.oracle.substratevm:svm"
-    annotationProcessor "io.micronaut:micronaut-graal"
+    annotationProcessor "io.micronaut:micronaut-graal" // <1>
     //end::graal[]
 
     compileOnly "io.micronaut:micronaut-inject-java"
