Update guide to RC15 and rename native image app

--- a/complete/Dockerfile
+++ b/complete/Dockerfile
@@ -1,9 +1,9 @@
-FROM oracle/graalvm-ce:1.0.0-rc13 as graalvm
-COPY . /home/app/complete
-WORKDIR /home/app/complete
+FROM oracle/graalvm-ce:1.0.0-rc15 as graalvm
+COPY . /home/app/micronaut-graal-app
+WORKDIR /home/app/micronaut-graal-app
 RUN native-image --no-server -cp build/libs/complete-*.jar
 
 FROM frolvlad/alpine-glibc
 EXPOSE 8080
-COPY --from=graalvm /home/app/complete .
-ENTRYPOINT ["./complete"]
+COPY --from=graalvm /home/app/micronaut-graal-app .
+ENTRYPOINT ["./micronaut-graal-app"]
