--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,14 @@
-sudo: false
+dist: trusty
+addons:
+  chrome: stable
+language: java
+jdk:
+  - oraclejdk8
+sudo: required
 cache:
   directories:
   - "$HOME/.gradle/caches/"
   - "$HOME/.gradle/wrapper/"
-jdk:
-- oraclejdk8
 before_cache:
 - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
 - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
