--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,6 @@
 plugins {
-    id "org.asciidoctor.convert" version "1.6.0"
-    id "org.aim42.htmlSanityCheck" version "1.1.0"
-}
-
-asciidoctorj {
-    version = '1.6.2'
+    id 'org.aim42.htmlSanityCheck' version '1.1.3'
+    id 'org.asciidoctor.jvm.convert' version '2.3.0'
 }
 
 apply from:"https://raw.githubusercontent.com/micronaut-projects/micronaut-guides/master/gradle/guide-build.gradle"
