Add help section
[ci skip]

--- a/src/main/docs/guide/toc.yml
+++ b/src/main/docs/guide/toc.yml
@@ -9,3 +9,5 @@ graal:
   title: Adding Graal support
   creatingGraalImage: Creating Graal native image
 nextSteps: Next steps
+help:
+  title: Help with Micronaut
