--- a/complete/Dockerfile
+++ b/complete/Dockerfile
@@ -5,9 +5,10 @@ RUN gu install native-image
 COPY . /home/app/micronaut-graal-app
 WORKDIR /home/app/micronaut-graal-app
 
-RUN native-image --no-server --static -cp build/libs/complete-*-all.jar
+RUN native-image --no-server -cp build/libs/complete-*-all.jar
 
-FROM scratch
+FROM frolvlad/alpine-glibc
+RUN apk update && apk add libstdc++
 EXPOSE 8080
 COPY --from=graalvm /home/app/micronaut-graal-app/micronaut-graal-app /micronaut-graal-app/micronaut-graal-app
 ENTRYPOINT ["/micronaut-graal-app/micronaut-graal-app"]
