--- a/initial/micronaut-cli.yml
+++ b/initial/micronaut-cli.yml
@@ -1,5 +1,6 @@
-profile: service
+applicationType: default
 defaultPackage: example
----
 testFramework: junit
 sourceLanguage: java
+buildTool: gradle
+features: [annotation-api, app-name, docker, gradle, http-client, java, java-application, junit, logback, netty-server, readme, shade, yaml]
