Update 'complete' project

--- a/complete/src/main/resources/META-INF/native-image/example.micronaut/complete-application/native-image.properties
+++ b/complete/src/main/resources/META-INF/native-image/example.micronaut/complete-application/native-image.properties
@@ -1,3 +1,2 @@
-Args = -H:IncludeResources=logback.xml|application.yml \
-       -H:Name=micronaut-graal-app \
+Args = -H:Name=micronaut-graal-app \
        -H:Class=example.micronaut.Application
