--- a/complete/build.gradle
+++ b/complete/build.gradle
@@ -1,84 +1,42 @@
 plugins {
-    id "net.ltgt.apt-eclipse" version "0.21"
     id "com.github.johnrengelman.shadow" version "6.0.0"
-    id "application"
+    id "io.micronaut.application" version '1.0.3'
 }
 
 version "0.1"
-group "example.micronaut"
+group "com.example"
 
 repositories {
+    mavenCentral()
     jcenter()
 }
 
-configurations {
-    // for dependencies that are needed for development only
-    developmentOnly
+micronaut {
+    runtime "netty"
+    testRuntime "junit5"
+    processing {
+        incremental true
+        annotations "example.micronaut.*"
+    }
+}
+
+nativeImage {
+    imageName('first-graalvm-application')
 }
 
 dependencies {
-    annotationProcessor(enforcedPlatform("io.micronaut:micronaut-bom:$micronautVersion"))
-    annotationProcessor("io.micronaut:micronaut-inject-java")
-    annotationProcessor("io.micronaut:micronaut-validation")
-
-    compileOnly(enforcedPlatform("io.micronaut:micronaut-bom:$micronautVersion"))
-
-    //tag::graal[]
-    compileOnly("org.graalvm.nativeimage:svm")
-    annotationProcessor("io.micronaut:micronaut-graal")  // <1>
-    //end::graal[]
-
-    implementation(enforcedPlatform("io.micronaut:micronaut-bom:$micronautVersion"))
-    implementation("io.micronaut:micronaut-inject")
     implementation("io.micronaut:micronaut-validation")
     implementation("io.micronaut:micronaut-runtime")
     implementation("javax.annotation:javax.annotation-api")
-    implementation("io.micronaut:micronaut-http-server-netty")
     implementation("io.micronaut:micronaut-http-client")
-
+    implementation("io.micronaut.sql:micronaut-jdbc-hikari")
+    implementation("io.micronaut.data:micronaut-data-jdbc")
     runtimeOnly("ch.qos.logback:logback-classic")
-
-    testAnnotationProcessor(enforcedPlatform("io.micronaut:micronaut-bom:$micronautVersion"))
-    testAnnotationProcessor("io.micronaut:micronaut-inject-java")
-
-    testImplementation(enforcedPlatform("io.micronaut:micronaut-bom:$micronautVersion"))
-    testImplementation("org.junit.jupiter:junit-jupiter-api")
-    testImplementation("io.micronaut.test:micronaut-test-junit5")
-
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine")
 }
-
-test.classpath += configurations.developmentOnly
 
 mainClassName = "example.micronaut.Application"
-
-// use JUnit 5 platform
-test {
-    useJUnitPlatform()
-}
 
 java {
     sourceCompatibility = JavaVersion.toVersion('8')
     targetCompatibility = JavaVersion.toVersion('8')
-}
-
-tasks.withType(JavaCompile) {
-    options.encoding = "UTF-8"
-    options.compilerArgs.addAll([
-        '-parameters',
-        // enables incremental compilation
-        '-Amicronaut.processing.incremental=true',
-        '-Amicronaut.processing.annotations=example.micronaut.*',
-        '-Amicronaut.processing.group=example.micronaut',
-        '-Amicronaut.processing.module=complete',
-    ])
-}
-
-shadowJar {
-    mergeServiceFiles()
-}
-
-tasks.withType(JavaExec) {
-    classpath += configurations.developmentOnly
-    jvmArgs('-XX:TieredStopAtLevel=1', '-Dcom.sun.management.jmxremote')
 }
