--- a/complete/build.gradle
+++ b/complete/build.gradle
@@ -1,10 +1,10 @@
 plugins {
-    id "com.github.johnrengelman.shadow" version "6.0.0"
-    id "io.micronaut.application" version '1.0.3'
+    id("com.github.johnrengelman.shadow") version "6.1.0"
+    id("io.micronaut.application") version "1.2.0"
 }
 
-version "0.1"
-group "com.example"
+version = "0.1"
+group = "com.example"
 
 repositories {
     mavenCentral()
@@ -12,16 +12,12 @@ repositories {
 }
 
 micronaut {
-    runtime "netty"
-    testRuntime "junit5"
+    runtime("netty")
+    testRuntime("junit5")
     processing {
-        incremental true
-        annotations "example.micronaut.*"
+        incremental(true)
+        annotations("example.micronaut.*")
     }
-}
-
-nativeImage {
-    imageName('first-graalvm-application')
 }
 
 dependencies {
@@ -29,14 +25,16 @@ dependencies {
     implementation("io.micronaut:micronaut-runtime")
     implementation("javax.annotation:javax.annotation-api")
     implementation("io.micronaut:micronaut-http-client")
-    implementation("io.micronaut.sql:micronaut-jdbc-hikari")
-    implementation("io.micronaut.data:micronaut-data-jdbc")
     runtimeOnly("ch.qos.logback:logback-classic")
+}
+
+nativeImage {
+    imageName('hello-world')
 }
 
 mainClassName = "example.micronaut.Application"
 
 java {
-    sourceCompatibility = JavaVersion.toVersion('8')
-    targetCompatibility = JavaVersion.toVersion('8')
+    sourceCompatibility = JavaVersion.toVersion("8")
+    targetCompatibility = JavaVersion.toVersion("8")
 }
